Add changes to WU06

--- a/css/index.css
+++ b/css/index.css
@@ -8,3 +8,15 @@
   padding-bottom: 0.7em;
   font-size: 15px;
 }
+.Section__article-div .Div__dropDown {
+  margin: auto;
+  padding-left: 40%;
+}
+.Section__article-div .Div__dropDown-button {
+  border: none;
+  background-color: white;
+  color: #324755;
+}
+.Section__article-div .fas {
+  font-size: 20px;
+}
