--- a/sass/index.scss
+++ b/sass/index.scss
@@ -7,4 +7,16 @@
 		padding-bottom: 0.7em;
 		font-size: 15px;
 	}
+	.Div__dropDown {
+		margin: auto;
+		padding-left: 40%;
+	}
+	.Div__dropDown-button {
+		border: none;
+		background-color: white;
+		color: #324755;
+	}
+	.fas {
+		font-size: 20px;
+	}
 }
