Add changes to WU06

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,6 @@ video {
 
 html,
 body {
-  background-color: white;
   font-family: "Roboto", sans-serif;
   margin: 0 auto;
   color: #324755;
@@ -46,4 +45,15 @@ input {
   background-color: #f0f3f4;
   padding: 0.5em;
   border-radius: 5px;
+}
+
+/*LIGHT AND DARK MODE*/
+:root {
+  background-color: #e8e6dc;
+  color: #3d3d3d;
+}
+
+.lightMode {
+  background-color: #171923;
+  color: #c5cddb;
 }
