--- a/sass/index.scss
+++ b/sass/index.scss
@@ -3,9 +3,10 @@
 	align-items: center;
 	border-bottom: 1px solid #e0e1e2;
 	border-top: 1px solid #e0e1e2;
-	h1 {
+	.headLineLarge {
 		padding-bottom: 0.7em;
 		font-size: 15px;
+		color: red;
 	}
 	.Div__dropDown {
 		margin: auto;
