Add changes to WU06. Add light/dark mode

--- a/css/style.css
+++ b/css/style.css
@@ -60,3 +60,7 @@ body {
   background-color: #171923;
   color: #c5cddb;
 }
+.lightMode .Div__dropDown-button {
+  background-color: #171923;
+  color: #c5cddb;
+}
