--- a/sass/style.scss
+++ b/sass/style.scss
@@ -63,4 +63,8 @@ body {
 .lightMode {
 	background-color: #171923;
 	color: #c5cddb;
+	.Div__dropDown-button {
+		background-color: #171923;
+		color: #c5cddb;
+	}
 }
