Add changes to WU06

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -3,7 +3,9 @@
 	align-items: center;
 	border-bottom: 1px solid #e0e1e2;
 	border-top: 1px solid #e0e1e2;
+	padding: 0.5em;
 }
+
 .Div {
 	padding: 0.5em;
 	display: flex;
