--- a/css/index.css
+++ b/css/index.css
@@ -10,6 +10,7 @@ section {
   border-top: 1px solid #e0e1e2;
   padding: 0.5em;
   z-index: 10;
+  position: relative;
 }
 .Section__article-div .Div__dropDown-button {
   border: none;
@@ -26,9 +27,10 @@ section {
 }
 
 .Section__article-div-delete {
+  position: absolute;
   background-color: red;
   height: 66px;
-  z-index: 1;
+  z-index: 0;
 }
 .Section__article-div-delete .Section__article-div-delete::before {
   font-family: "Font Awesome 5 Free";
