--- a/css/style.css
+++ b/css/style.css
@@ -64,3 +64,14 @@ body {
   background-color: #171923;
   color: #c5cddb;
 }
+.lightMode .Main {
+  background-color: #171923;
+  color: #c5cddb;
+}
+.lightMode .Section__settings-div-sort {
+  background-color: #171923;
+  color: #c5cddb;
+}
+.lightMode .Section__settings-div-sort {
+  background-color: #111626;
+}
