--- a/sass/style.scss
+++ b/sass/style.scss
@@ -67,4 +67,15 @@ body {
 		background-color: #171923;
 		color: #c5cddb;
 	}
+	.Main {
+		background-color: #171923;
+		color: #c5cddb;
+	}
+	.Section__settings-div-sort {
+		background-color: #171923;
+		color: #c5cddb;
+	}
+	.Section__settings-div-sort {
+		background-color: rgb(17, 22, 38);
+	}
 }
