--- a/sass/style.scss
+++ b/sass/style.scss
@@ -78,4 +78,8 @@ body {
 	.Section__settings-div-sort {
 		background-color: rgb(17, 22, 38);
 	}
+	.Section__article-div {
+		background-color: #171923;
+		color: #c5cddb;
+	}
 }
