--- a/css/settings.css
+++ b/css/settings.css
@@ -36,50 +36,77 @@
   border-bottom: 1px solid #f0f3f4;
 }
 
-.settings-label-select {
-  display: block;
-  position: relative;
-  padding-left: 55px;
-  margin-bottom: 12px;
-  cursor: pointer;
-  font-size: 22px;
-  user-select: none;
-  bottom: 11px;
+.toggleButton {
+  width: 50px;
+  border: none;
+  border-radius: 15px;
+  display: flex;
+  height: 25px;
+  align-items: center;
+  justify-content: left;
 }
-.settings-label-select .inputToggle {
-  display: none;
+.toggleButton i {
+  margin: 2px;
+  font-size: 20px;
+  color: #fff;
 }
-.settings-label-select .on {
-  position: absolute;
-  opacity: 0;
-  cursor: pointer;
-  height: 10px;
-  width: 0;
-}
-.settings-label-select .on:checked ~ .off {
+
+.on {
+  justify-content: right;
   background-color: #87bcbf;
 }
-.settings-label-select .on:checked ~ .off:after {
-  left: 30px;
+
+/* .settings-label-select {
+	display: block;
+	position: relative;
+	padding-left: $toggle-width;
+	margin-bottom: 12px;
+	cursor: pointer;
+	font-size: 22px;
+	user-select: none;
+	bottom: 11px;
+
+	.inputToggle {
+		display: none;
+	}
+
+	.on {
+		position: absolute;
+		opacity: 0;
+		cursor: pointer;
+		height: 10px;
+		width: 0;
+	}
+
+	.on:checked ~ .off {
+		background-color: $toggle-background-color-on;
+
+		&:after {
+			left: $toggle-width - $toggle-control-size - $toggle-gutter;
+		}
+	}
+
+	.off {
+		position: absolute;
+		top: 0;
+		left: 0;
+		height: $toggle-height;
+		width: $toggle-width;
+		border-radius: $toggle-radius;
+		background-color: $toggle-background-color-off;
+		transition: background-color $toggle-control-speed $toggle-control-ease;
+
+		&:after {
+			content: "";
+			position: absolute;
+			left: $toggle-gutter;
+			top: $toggle-gutter;
+			width: $toggle-control-size;
+			height: $toggle-control-size;
+			border-radius: $toggle-radius;
+			background: $toggle-control-color;
+			transition: left $toggle-control-speed $toggle-control-ease;
+		}
+	}
 }
-.settings-label-select .off {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 30px;
-  width: 55px;
-  border-radius: 15px;
-  background-color: #e0e5e5;
-  transition: background-color 0.15s ease-in;
-}
-.settings-label-select .off:after {
-  content: "";
-  position: absolute;
-  left: 5px;
-  top: 5px;
-  width: 20px;
-  height: 20px;
-  border-radius: 15px;
-  background: white;
-  transition: left 0.15s ease-in;
-}
+ */
