--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 * {
   box-sizing: border-box;
   padding: 0;
+  margin: 0;
 }
 
 img,
@@ -76,6 +77,10 @@ body {
   background-color: #111626;
 }
 .lightMode .Section__article-div {
+  background-color: #171923;
+  color: #c5cddb;
+}
+.lightMode .dropDownNewsSection {
   background-color: #171923;
   color: #c5cddb;
 }
