--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,7 @@
 * {
 	box-sizing: border-box;
 	padding: 0;
+	margin: 0;
 }
 
 img,
@@ -79,6 +80,10 @@ body {
 		background-color: rgb(17, 22, 38);
 	}
 	.Section__article-div {
+		background-color: #171923;
+		color: #c5cddb;
+	}
+	.dropDownNewsSection {
 		background-color: #171923;
 		color: #c5cddb;
 	}
